refine ElasticSearch and bug fix